[package]
name = "chia-vdf-verify"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Pure-Rust Chia VDF proof verifier — no GMP, no C dependencies"
authors = ["Richard Kiss <him@richardkiss.com>"]
homepage = "https://github.com/richardkiss/chia-vdf-verify"
repository = "https://github.com/richardkiss/chia-vdf-verify"
readme = "README.md"
keywords = ["chia", "vdf", "verifiable-delay-function", "wesolowski"]
categories = ["cryptography"]

[lib]
name = "chia_vdf_verify"
crate-type = ["cdylib", "rlib"]

[dependencies]
malachite-nz = "0.9"
malachite-base = "0.9"
sha2 = "0.10"
pyo3 = { version = "0.23", features = ["extension-module"], optional = true }

[features]
python = ["pyo3"]

[dev-dependencies]
hex = "0.4"
criterion = { version = "0.5", features = ["html_reports"] }
num-bigint = { version = "0.4", features = ["rand"] }

[[bench]]
name = "verify"
harness = false

[[bench]]
name = "bigint_compare"
harness = false

[[bench]]
name = "micro"
harness = false

[profile.release]
lto = "fat"
codegen-units = 1
