[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[project]
name = "chia-vdf-verify"
version = "0.1.0"
description = "Pure-Rust VDF verifier for Chia (drop-in replacement for chiavdf verification)"
requires-python = ">=3.8"
license = { text = "Apache-2.0" }

[tool.maturin]
features = ["python"]
module-name = "chia_vdf_verify"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
